# Miles-SW

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  build_project.sh
docs/: README.md
docs/design/: System-Design.md
docs/hardware/: hardware.md
docs/hardware/imu/: tdk icm-20948.md
include/common/: logger.hpp  types.h
include/drivers/imu/: icm-20948.hpp
include/pal/: spi.h
src/drivers/imu/: icm-20948.cpp
src/pal/linux/: spi.cpp
tests/: CMakeLists.txt
tests/drivers/imu/: icm-20948_test.cpp  plot_imudata.py
tests/spi/: spi_test.cpp
toolchain/riscv64/: c906fdv-riscv64-unknown-linux-musl.toolchain.cmake
